# languine

./: .env  .env.example  .env_example  .gitattributes  .gitignore  2026-02-20.md  README.md  compose.yml  example.env  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  config.py  db.py  main.py
backend/src/models/: __init__.py
backend/src/routes/: auth.py  cards.py  decks.py  dictionary.py  fsrs.py  images.py  translate.py  tts.py  users.py
backend/src/services/: auth_service.py  card_service.py  deck_import_export_service.py  deck_service.py  dictionary_api.py  dictionary_service.py  fsrs_service.py  image_service.py  translate_service.py  tts_service.py  user_service.py
backend/src/services/fsrs/: card.py  grade.py  learning_state.py  optimizer.py  review_log.py  scheduler.py
backend/src/tests/: conftest.py  run_all_tests_cov.sh  test_auth.py  test_auth_integration.py  test_auth_unit.py  test_builtin_decks_integration.py  test_card_integration.py  test_card_unit.py  test_create_deck_integration.py  test_create_deck_unit.py  test_db_integration.py  test_db_unit.py  test_deck_import_export_unit.py  test_decks_integration.py  test_decks_unit.py  test_dictionary_integration.py  test_dictionary_unit.py  test_fsrs.py  test_fsrs_optimizer.py  test_fsrs_routes_integration.py  test_fsrs_service_unit.py  test_images_integration.py  test_images_unit.py  test_sql_injection_integration.py  test_sql_injection_unit.py  test_translate_integration.py  test_translate_unit.py  test_tts_integration.py  test_tts_unit.py  test_user_integration.py  test_user_unit.py
backend/src/tests/sample_data/: sample_logs.csv
backend/tests/: conftest.py  test_auth.py
database/: create_table.sql
database/init/: 01_create_table.sql  02_seed_builtin_decks.sql  chinese_vocab_beginner.csv  korean_vocab_beginner.csv
docs/: fsrs.md
frontend/: .env.example  README.md  app.json  babel.config.js  eslint.config.js  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
frontend/apis/: client.ts
frontend/apis/endpoints/: auth.ts  cards.ts  decks.ts  example.ts  fsrs.ts  image.ts  translation.ts  tts.ts  users.ts
frontend/app/: _layout.tsx
frontend/app/(auth)/: index.tsx  login.tsx
frontend/app/(tabs)/: _layout.tsx  decks.tsx  help.tsx  index.tsx  revision.tsx  settings.tsx
frontend/app/context/: AuthContext.tsx
frontend/assets/: AppLogo.tsx  LoginBackground.tsx  PastaLogo.tsx
frontend/assets/icons/: ChevronDownIcon.tsx  DecksIcon.tsx  EditIcon.tsx  HelpIcon.tsx  (+11 more)
frontend/constants/: colors.ts  helpData.ts  placeholders.ts  shadows.ts
frontend/context/: AuthContext.tsx  LanguageOptionsContext.tsx  ReviewSessionContext.tsx
frontend/styles/: textStyles.ts
frontend/types/: auth.ts  decks.ts
frontend/utils/: imageUtils.ts  storage.ts
meetings/: 2025-09-09.md  2025-09-11.md  2025-09-30.md  2025-10-03.md  2025-10-04.md  2025-10-17.md  2025-10-31.md  2025-11-06.md  2025-11-07.md  2025-11-13.md  2025-11-14.md  2025-11-17.md  2025-11-25.md  2025-12-12.md  2026-01-02.md  2026-01-09.md  2026-01-14.md  2026-01-16.md  2026-01-19.md  2026-01-22.md  2026-01-29.md  2026-01-30.md  2026-02-05.md  2026-02-13.md  2026-02-27.md  2026-03-05.md  2026-03-06.md  2026-03-12.md  2026-03-16.md  2026-03-19.md  2026-03-23.md  2026-03-26.md  2026-04-06.md
(+83 files in other folders)
