[tool.poetry]
name = "languine"
version = "0.1.0"
description = "Backend for Languine App"
authors = [
    "Marwa Khafagy", 
    "Selina Kim", 
    "Giovanna Gerada", 
    "Stella Gu", 
    "Tinu Joseph"]
packages = [
    { include = "services", from = "src" },
    { include = "routes", from = "src" }
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
flask = "^3.1.2"
pydantic = "^2.12.2"
flask-jwt-extended = "^4.7.1"
flask-limiter = "^4.0.0"
flask-sqlalchemy = "^3.1.1"
requests = "^2.32.5"
deepl = "^1.25.0"
python-dotenv = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.2.0"]
build-backend = "poetry.core.masonry.api"
